# examples-vscode-devcontainer

./: .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
