[tool.poetry]
name = "examples-vscode-devcontainer"
version = "0.1.0"
description = ""
authors = ["cm-kojimat <kojima.takashi@classmethod.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.25.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
